Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121143

SelectionRectangle does not work correctly when de-selecting

XMLWordPrintable

    • Windows
    • f0fbedbe6 (dev), 7adfb0194 (6.7), 2b8ebec68 (6.6), bf0f4bab4 (dev), a82f5419b (6.7)

      In users example if you ctrl+click item in the treeview you can select an item.

      After this shift+click(range select) and ctrl+click(single select) work as they should but deselection of the active items seems to be bugged.

       

        1. Treenavig.zip
          11 kB
          Tero Pelkonen
        For Gerrit Dashboard: QTBUG-121143
        # Subject Branch Project Status CR V

            richard Richard Moe Gustavsen
            tero.pelkonen Tero Pelkonen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: